fix(yalb-alignment): offcanvas div which wraps page content needs to have height 100%

--- a/components/00-tokens/layout/_layout.scss
+++ b/components/00-tokens/layout/_layout.scss
@@ -47,6 +47,10 @@ html {
   height: 100%;
 }
 
+.dialog-off-canvas-main-canvas {
+  height: 100%;
+}
+
 ///////
 
 $layout-widths: map.deep-get(tokens.$tokens, size, component-layout, width);
